# rlt

./: .gitenv  .gitignore  Cargo.toml  README.md  test-index
.github/workflows/: cr.yml
.obsidian/: app.json  graph.json  workspace.json
.obsidian/plugins/obsidian-excalidraw-plugin/: data.json
Excalidraw/: Drawing 2023-09-22 20.04.07.excalidraw.md  Drawing 2023-09-28 08.38.08.excalidraw.md  client-with-workspace-and-core.md  hash-object-from-gpt.excalidraw.md
docs/: Commit.md  add.md  cat-file.md  git index.md  git internal.md  git-index-example.md  git-index.md  git-init.md  git.md  hash-object.md  object.md  revisions.md  status.md  개발기.md  설계 (고민).md
src/: accessor.rs  add.rs  blob.rs  cat_file.rs  cli.rs  core.rs  hash_object.rs  hasher.rs  init.rs  main.rs  subcommand.rs
src/adapters/: command_executor.rs  compressor.rs  data_store.rs  filesystem_utils.rs  hasher.rs  mod.rs  object_manager.rs  object_store.rs  workspace_provider.rs
src/cli/: parser.rs
src/data_store/: data_store.rs  file_store.rs  memory_store.rs  mod.rs
src/entities/: index.rs  mod.rs  object.rs
src/infrastructures/: direct_content_provider.rs  file_store.rs  local_filesystem_provider.rs  memory_store.rs  mod.rs  remote_content_provider.rs  test_content_provider.rs
src/infrastructures/data_store/: file_store.rs  (+1 more)
src/manager/: mod.rs  object_manager.rs
src/use_cases/: add.rs  cat_file.rs  hash_object.rs  ignore_service.rs  index_service.rs  init.rs  ls_files.rs  mod.rs  object_service.rs  pathspec.rs  utils.rs
src/workspace_provider/: test_content_provider.rs
(+21 files in other folders)
