[package]
name = "깃"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
env_logger = "0.10.0"
flate2 = "1.0.27"
globset = "0.4.13"
log = "0.4.20"
sha1 = "0.10.5"
sha2 = "0.10.7"
